--- a/cn/config.json
+++ b/cn/config.json
@@ -2,6 +2,6 @@
   "additionalFooterText": "All content and images &copy; by Your Name Goes Here&nbsp;",
   "anchorCharacter": "#",
   "lineBreaks": "gfm",
-  "title": "My Test MDWiki",
+  "title": "ZeroNet 导航",
   "useSideMenu": true
 }
