--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "additionalFooterText": "All content and images &copy; by Your Name Goes Here&nbsp;",
+  "additionalFooterText": "<a href="/Mail.ZeroNetwork.bit/?to=apuar">apuar@zeroid.bit</a> &nbsp;",
   "anchorCharacter": "#",
   "lineBreaks": "gfm",
   "title": "ZeroNet 导航",
